<resources>
    <string name="app_name">Simple Login App</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="NewUsername">NewUsername</string>
    <string name="NewPassword">NewPassword</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_member_register_here">New member? Register here.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="have_an_account_log_in">Have an account? Log in</string>
    <string name="no_of_attempts_remaining">No. of attempts remaining</string>
    <string name="log_out">Log out</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="AccountRecovery">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="profilePic">profilePic</string>
    <string name="edit">Edit</string>
    <string name="text_view1">TextView</string>
    <string name="text_view2">TextView</string>
    <string name="text_view3">TextView</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">FirstName</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="UserProfilePic">TODO</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="birthdate_mm_dd_yyyy">Birthdate (mm/dd/yyyy)</string>
    <string name="displayfullname">displayFullname</string>
    <string name="displayemail">displayEmail</string>
    <string name="displaygender">displayGender</string>
    <string name="displaybirthdate">displayBirthdate</string>
    <string name="birthdate">Birthdate</string>
    <string name="displayage">displayAge</string>
    <string name="change_email">CHANGE EMAIL</string>
    <string name="new_email">New Email</string>
    <string name="old_password">Old Password</string>
    <string name="old_email">Old Email</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in.</string>
    <string name="cancel">Cancel</string>
    <string name="pass">Pass</string>
    <string name="todo">TODO</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="update_information">Update Information</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="swipe_to_refresh">Swipe to refresh</string>
</resources>